# event-time-tracker

./: .gitignore  GIT_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_seed.sql  003_update_timepoints.sql  004_make_category_l3_optional.sql  005_add_remind_days.sql
src-tauri/src/: commands.rs  db.rs  main.rs
src/api/: index.ts
src/components/: CategoryGroupCard.vue  DateGroupCard.vue  PageHeader.vue  ReminderNotification.vue
src/composables/: useEventCard.ts
src/router/: index.ts
src/services/: reminderService.ts
src/stores/: category.ts  formState.ts  index.ts  region.ts  reminder.ts  timePoint.ts
src/types/: index.ts
src/utils/: index.ts
src/views/: CategoryManage.vue  DataManage.vue  DataManage_backup.vue  Home.vue  Layout.vue  QueryPage.vue  RegionManage.vue  Settings.vue  TimePointManage.vue  Timeline.vue
xhs/: new.css  new.js  themes.css  themes.js
