[package]
name = "event-time-tracker"
version = "1.0.0"
description = "时间节点记录系统"
authors = ["TimeTracker"]
edition = "2021"

[package.metadata.winres]
ProductName = "时间节点记录系统"
CompanyName = "TimeTracker"
FileDescription = "时间节点记录系统"
LegalCopyright = "Copyright © 2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = "z"     # 优化文件大小
lto = true          # 启用链接时优化
codegen-units = 1   # 更好的优化
panic = "abort"     # 减少panic处理代码
strip = true        # 移除符号表

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
